# learning

VPN_test/: AI驱动Web系统测试方法论.md  (+6 more)
smart-ops-cli/smart-ops-cli/: .coverage  AUDIT_PROGRESS.md  README.md  build.sh  coverage.json  deploy.sh  pyproject.toml  requirements.txt  smart-ops-arm64.spec  smart-ops-x86_64.spec  smart-ops.spec  tool
smart-ops-cli/smart-ops-cli/build_env/: pyvenv.cfg
smart-ops-cli/smart-ops-cli/config/: default.yaml
smart-ops-cli/smart-ops-cli/deployment/: Dockerfile  docker-compose.yml  logrotate  smart-ops.service
smart-ops-cli/smart-ops-cli/docs/: ARCHITECTURE.md  PYTHON_TUTORIAL.md  architecture.md  deployment-guide.md  specification.md
smart-ops-cli/smart-ops-cli/examples/: quick_start.py
smart-ops-cli/smart-ops-cli/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0090a982e9b83624___init___py.html  z_0618756b1ff51bca___init___py.html  z_0618756b1ff51bca_health_py.html  z_0618756b1ff51bca_port_scanner_py.html  z_0618756b1ff51bca_process_monitor_py.html  z_0618756b1ff51bca_report_generator_py.html  z_0618756b1ff51bca_system_py.html  z_0618756b1ff51bca_types_py.html  z_145eef247bfb46b6___init___py.html  z_f1b38b22aeb65474___init___py.html  z_f1b38b22aeb65474_logging_config_py.html  z_f1b38b22aeb65474_validators_py.html
smart-ops-cli/smart-ops-cli/prompts/: 01_project_init.md  02_system_module.md  03_health_check.md  04_port_scanner.md  05_process_monitor.md  06_report_generator.md  07_test_design.md
smart-ops-cli/smart-ops-cli/smart_ops_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+334 files in other folders)
