[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-ops-cli"
version = "1.0.0"
description = "智能运维命令行工具 - 服务器健康检查与故障诊断"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.scripts]
tool = "src.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--cov=src --cov-report=term-missing --cov-report=html:htmlcov"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
